force-app/main/default/objects/ASF_Case_Integration__c/ASF_Case_Integration__c.object-meta.xml
<CustomObject>
    <label>ASF Case Integration</label>
    <nameField>
        <displayFormat>ASF_CInt_{0000}</displayFormat>
        <label>ASF Case Integration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASF Case Integrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>