force-app/main/default/objects/ASF_Case_Integration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Using ABHIL BU</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ASF Case Integrations</relationshipLabel>
    <relationshipName>ASF_Case_Integrations</relationshipName>
    <type>Lookup</type>
</CustomField>