force-app/main/default/objects/ASF_Case_Integration__c/fields/Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement__c</fullName>
    <description>field to store api acknowledgement</description>
    <label>Acknowledgement</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>