force-app/main/default/objects/ASF_Case_Integration__c/fields/Business_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_External_Id__c</fullName>
    <label>Business External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>