force-app/main/default/objects/ASF_Case_Integration__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>ASF Case Integrations</relationshipLabel>
    <relationshipName>ASF_Case_Integrations</relationshipName>
    <type>Lookup</type>
</CustomField>