force-app/main/default/objects/ASF_Case_Integration__c/fields/Exception_Log__c.field-meta.xml
<CustomField>
    <fullName>Exception_Log__c</fullName>
    <label>Exception Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>