force-app/main/default/objects/ASF_Case_Integration__c/fields/Integration_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Ext_Id__c</fullName>
    <label>Integration Ext Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>