force-app/main/default/objects/ASF_Case_Integration__c/fields/Is_Validation_Success__c.field-meta.xml
<CustomField>
    <fullName>Is_Validation_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Validation Success</label>
    <type>Checkbox</type>
</CustomField>