force-app/main/default/objects/ASF_Case_Integration__c/fields/Next_Retry__c.field-meta.xml
<CustomField>
    <fullName>Next_Retry__c</fullName>
    <description>Virendra - This field is used in Schedule path of flow to run the retry logic.</description>
    <label>Next Retry</label>
    <type>DateTime</type>
</CustomField>