force-app/main/default/objects/ASF_Case_Integration__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <label>Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>