force-app/main/default/objects/ASF_Case_Integration__c/fields/Protocol__c.field-meta.xml
<CustomField>
    <fullName>Protocol__c</fullName>
    <label>Protocol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>