force-app/main/default/objects/ASF_Case_Integration__c/fields/Reason_of_STP__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_STP__c</fullName>
    <description>As a part of PR970457-2615, for stamping the STPDescription coming from BRE in Salesforce</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason of STP</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>