force-app/main/default/objects/ASF_Case_Integration__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <description>This field will be used to store request and re-use them while re-invocation.</description>
    <label>Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>