force-app/main/default/objects/ASF_Case_Integration__c/fields/Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Response_Time__c</fullName>
    <label>Response Time</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>