force-app/main/default/objects/ASF_Case_Integration__c/fields/Retry__c.field-meta.xml
<CustomField>
    <fullName>Retry__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Virendra - Default this field to TRUE to set the retry for all the Integrations</description>
    <label>Retry</label>
    <type>Checkbox</type>
</CustomField>