force-app/main/default/objects/ASF_Case_Integration__c/fields/Retry_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Retry_Attempt__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Virendra - Initial value is 0, and incremented on subsequent retries.</description>
    <label>Retry Attempt</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>