force-app/main/default/objects/ASF_Case_Integration__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Can be blank for Framework Type if Integrations. Need to be populated for generic integrations like eBot</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>eBOT</fullName>
            </value>
            <value>
                <fullName>eBOTFeedback</fullName>
            </value>
            <value>
                <fullName>Log</fullName>
            </value>
            <value>
                <fullName>BRE</fullName>
            </value>
            <value>
                <fullName>Litmus</fullName>
            </value>
            <value>
                <fullName>Enach</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>